
  * data/{common => fields}/priorities:
   + [NT] Rename file.
  * data/fields/essential:
    + [MR] Remove 'mount' from the essential packages.  Starting with
      util-linux version 2.29.2-3 the Essential flag has been removed.
      (Closes: #877511)
  * data/fields/priorities:
    + [NT] Remove "extra".

  * commands/lintian.pm:
    + [NT] Simplify handling of uncaught exceptions.

  * frontend/dplint:
    + [NT] Restore "$HOME/.lintian" as a directory that is used for
      user profiles and data files.  It was advertised as such in the
      documentation but the code actually only used the XDG_CONFIG_HOME
      path.  Thanks to Daniel Kauffman for the report.  (Closes: #875636)

  * lib/Lintian/Util.pm:
    + [NT] Rename the "fail" subroutine to "internal_error" to better
      reflect its purpose.

  * t/tests/binaries-from-other-arch:
    + [NT] Make test architecture specific as it fails on certain
      architectures.  (Closes: #877147)
  * t/tests/python-new-python2-package/*:
    + [CL] Correct Depends of python2.7 → python3 in Python 3 test
      package.
  * t/tests/python-python2-no-python3-unrel/debian/debian/control.in:
    + [CL] Add test for ignoring python-foo-doc packages.
    + [CL] Correct short descriptions of binary packages.

 -- Chris Lamb <lamby@debian.org>  Fri, 29 Sep 2017 19:13:19 +0100

lintian (2.5.54) unstable; urgency=medium

  * checks/copyright-file.pm:
    + [CL] Prevent false positives in copyright-year-in-future when
      matching URLs.
    + [CL] Prevent false positives in copyright-year-in-future when
      matching the Tcl license (eg. postgresql-10).  (Closes: #876360)
  * checks/debhelper.pm:
    + [CL] Ensure that "missing-build-dependency-for-dh_-command" is not
      emitted for dh-strip-nondeterminism at Debhelper compat levels >=
      10.  (Closes: #876443)
  * checks/files.desc:
    + [CL] Correct grammar and punctuation in description of
      node-package-install-in-nodejs-rootdir.