@@ -728,6 +728,11 @@ foo [!any-i386] binary: some-tag-not-for-i386 optional-extra
         <itemizedlist>
           <listitem>
             <para>
+              <filename>$XDG_CONFIG_HOME/lintian/profiles</filename>
+            </para>
+          </listitem>
+          <listitem>
+            <para>
               <filename>$HOME/.lintian/profiles</filename>
             </para>
           </listitem>
@@ -753,7 +758,8 @@ foo [!any-i386] binary: some-tag-not-for-i386 optional-extra
           first file matching the profile will be used.  This allows
           users to override a system profile by putting one with the
           same filename
-          in <filename>$HOME/.lintian/profiles</filename>.
+          in <filename>$XDG_CONFIG_HOME/lintian/profiles</filename>
+          or <filename>$HOME/.lintian/profiles</filename>.
         </para>
       </sect2>
       <sect2 label="2.5.2" id="section-2.5.2">
@@ -997,6 +1003,11 @@ Overridable: no
           vendor specific data files:
         </para>
         <itemizedlist>
+          <listitem>
+            <para>
+              <filename>$XDG_CONFIG_HOME/lintian/vendors/<replaceable>PROFILENAME</replaceable>/data</filename>
+            </para>
+          </listitem>
           <listitem>
             <para>
               <filename>$HOME/.lintian/vendors/<replaceable>PROFILENAME</replaceable>/data</filename>
